sonar improvements