@@ -19,7 +19,6 @@ import uk.gov.hmcts.reform.civil.service.docmosis.TemplateDataGenerator;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 import static java.util.Objects.nonNull;
@@ -87,7 +86,7 @@ public class CourtOfficerOrderGenerator implements TemplateDataGenerator<CourtOf
         List<LocationRefData> matchingLocations = locationRefDataService.getCourtLocationsByEpimmsId(
                         authorisation, caseData.getCaseManagementLocation().getBaseLocation())
                 .stream().filter(id -> id.getCourtTypeId().equals(CIVIL_COURT_TYPE_ID))
-                .collect(Collectors.toList());
+                .toList();
 
         if (matchingLocations.size() != 1) {
             throw new LocationRefDataException(
